src/test/deca/syntax/invalid/resultats/test_error_instruction-lex.res
'{': [@0,271:271='{',<36>,10:0]
'println': [@1,274:280='println',<18>,11:1]
'(': [@2,281:281='(',<34>,11:8]
STRING: [@3,282:302='" first instruction "',<47>,11:9]
')': [@4,303:303=')',<35>,11:30]
',': [@5,304:304=',',<33>,11:31]
'println': [@6,305:311='println',<18>,11:32]
'(': [@7,312:312='(',<34>,11:39]
STRING: [@8,313:334='" second instruction "',<47>,11:40]
')': [@9,335:335=')',<35>,11:62]
';': [@10,336:336=';',<39>,11:63]
'}': [@11,338:338='}',<37>,12:0]
